# sjconf-modules

./: .gitignore  ChangeLog  Makefile.am  README.rst  configure.ac
confs/: Makefile.am  modules.conf
debian/: changelog  control  rules  sjconf-modules.install  sjconf-modules.postinst  sjconf-modules.prerm
doc/: Makefile.am  modules.conf.sample  sjconf-modules.t2t
plugins/: modules.py.in
templates/modules/: modules.conf
